# flipython

./: README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml
app/: main.py
app/api/: __init__.py  api_keys.py  feature_flags.py
app/auth/: service.py
app/db/: session.py
app/db/models/: __init__.py  api_key.py  feature_flag.py
app/domain/: api_key.py  feature_flag.py
app/evaluation/: engine.py
app/repositories/: __init__.py  api_key.py  feature_flags.py
migrations/: alembic.ini  env.py
migrations/versions/: 04772727677f_create_api_keys_table.py  4e9f6db1d3af_create_feature_flags_table.py
tests/api/: test_api_keys.py  test_feature_flags.py
tests/evaluation/: test_engine.py
tests/repositories/: test_api_key.py  test_feature_flags.py
